fix: dropdown arrow overflow problem

--- a/modules/renderer/containers/ActionBar.less
+++ b/modules/renderer/containers/ActionBar.less
@@ -17,6 +17,7 @@
     background: none;
     border: 0;
     outline: none;
+    padding: 0 20px;
     min-width: 70px;
     max-width: 120px;
     transition: .2s;
